syntax = "proto3";

package proto;
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message RaftMessage {
    enum Type {
        CONSENSUS = 0;
        BROADCAST_TX = 1;
    }
    Type type = 1;
    uint64 fromId = 2;
    bytes data = 3;
}

message request_batch {
    string digest = 1;
    bytes txList = 2 [(gogoproto.customtype) = "github.com/meshplus/bitxhub-model/pb.Transactions"];
    uint64 height = 3;
}

message Ready {
    repeated bytes txHashes = 1 [(gogoproto.customtype) = "github.com/meshplus/bitxhub-kit/types.Hash"];
    uint64 height = 2;
}

message tx_slice {
	 repeated bytes TxList = 1 [(gogoproto.customtype) = "github.com/meshplus/bitxhub-model/pb.Transaction"];
}